# lyra

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .importlinter  .license-policy.json  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GETTING-STARTED.md  Makefile  README.md  RECAP.md  REVIEW.md  SECURITY.md  challenge-01-memoire.md  challenge-05-atomic-slm.md  config.toml.example  demo.py  lyra.toml.example  package.json  pyproject.toml  release-please-config.json  setup.sh
.claude/: dev-core.yml  run-dashboard.ts  settings.json  stack.yml
.claude-plugin/: marketplace.json
.github/workflows/: auto-merge.yml  ci.yml  deploy-preview.yml  publish.yml
artifacts/: security-audit-2026-03-26.md
artifacts/analyses/: 104-llm-circuit-breaker-analysis.mdx  105-toml-message-template-system-analysis.mdx  112-conversation-scoped-sessions-analysis.mdx  133-split-lyra-adapters-analysis.mdx  15-telegram-discord-hub-adapters.mdx  151-auth-middleware-trust-level-analysis.mdx  185-live-audio-streaming-analysis.mdx  2026-04-12-from-scratch-rebuild.md  268-agent-store-sqlite-analysis.mdx  282-60-merged-epic-status.mdx  320-token-level-streaming-analysis.mdx  341-message-index-architecture.md  343-db-first-agent-config-analysis.mdx  371-arch-stream-processor-render-event-analysis.mdx  395-split-core-subdirectories-analysis.mdx  411-typeddict-annotation-sprint-analysis.mdx  416-parallel-sub-issue-orchestration-analysis.mdx  417-persistence-layer-arch-findings-analysis.mdx  419-pulid-flux2-face-locking-analysis.mdx  428-security-audit-remediation-analysis.mdx  432-event-bus-pipeline-telemetry-analysis.mdx  457-extract-hub-standalone-process-analysis.mdx  472-unified-identity-layer-analysis.mdx  48-bus-abstraction-analysis.mdx  491-durable-persistence-layer-analysis.mdx  518-stt-tts-nats-adapter-decoupling-analysis.mdx  534-unify-inbound-audio-analysis.mdx  60-nats-epic-consolidated-review.mdx  620-cli-lifecycle-decorator-gap.mdx  666-drop-anthropicsdkdriver-consensus.mdx  728-containerize-voicecli-workers-analysis.mdx  (+39 more)
brand/: AGENT-META-PROMPT.md  BRAND-BOOK.md  BRAND-EXPLORATION-PLAYBOOK.md  BRAND-IDENTITY.md  avatar-final.html  avatar-gallery.html  concepts-gallery.html  forge-amber-v2-gallery.html  forge-arch-variations-gallery.html  forge-architecture-gallery.html  forge-cartoon-v1-gallery.html  forge-cyberpunk-gallery.html  forge-girls-3d-gallery.html  forge-variations-gallery.html  forge.yml  lyra-brand-gallery.html  lyra-customer-personas.html  lyra-logo-animated.html  lyra-logo-brief.json  lyra-logo-forge-v0.2.1.html  lyra-logo-forge-v0.2.2.html  lyra-logo-forge-v0.2.html  lyra-logo-forge.html  lyra-logo-gallery.html  lyra-logo-v2.html  lyra-logo.html  lyra-messaging-framework.html  lyra-positioning-exploration.html  lyra-tagline-fonts.html  lyra-taglines-extend.html  lyra-video-brief.html  lyra-visual-directions-v2.html  lyra-visual-directions.html
deploy/: agents.yml  gen-supervisor-conf.py  lyra-monitor.service  lyra-monitor.timer  lyra.service  provision.sh  setup.py  stack.toml
docker/: docker-compose.test.yml
docs/: ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  DEPLOYMENT-quadlet.md  DEPLOYMENT.md  GETTING-STARTED.md  HAPPY-PATHS.md  MULTI-BOT.md  OBSERVABILITY.md  PROD-MIGRATION-STRATEGY.md  QUADLET-ADOPTION.md  QUICKSTART.md  ROADMAP-LONGTERM.md  ROADMAP.md  adapters.md  agent-management.md  agents.md  architecture-visual-explainer.html  architecture-visual.excalidraw  code-quality-exceptions.md  contributing.md  skills.md  social-media-bricks.md  vision.md
scripts/: check-acl-authconf-drift.sh  check-acl-matrix-spec.sh  check-inbox-prefix.sh  check-nats-acls.sh  deploy-lib.sh  deploy-quadlet.sh  deploy.sh
scripts/dep-graph/: README.md  build_v3.py  build_v3_1.py  build_v4_3_gitgraph.py  build_v4_4_gitgraph.py  build_v4_5_gitgraph.py  build_v4_6_gitgraph.py  build_v4_7_gitgraph.py  build_v4_8_gitgraph.py  build_v4_gitgraph.py  layout.schema.json  pyproject.toml
scripts/dep-graph/dep_graph/: anchors.py  audit.py  build.py  cli.py  derive.py  fetch.py  flatten.py  lane.py  migrate.py  milestone.py  render.py  schema.py  status.py  titles.py
scripts/dep-graph/dep_graph/templates/: base.html  card.html  dep-graph.css  lane_col.html  milestone_row.html  theme.js
scripts/dep-graph/tests/: test_audit.py  test_build.py  test_dep_graph_golden.py  test_derive.py  test_fetch.py  test_keys.py
scripts/dep-graph/v5/: build.py  compose.py
scripts/dep-graph/v5/assets/: base.css  graph.css  hover.js
scripts/dep-graph/v5/components/: card.py  header.py  toggle.py  toolbar.py
scripts/dep-graph/v5/data/: corpus.py  derive.py  layout_graph.py  load.py  model.py
scripts/dep-graph/v5/tests/: conftest.py  test_assets.py  test_components.py  test_compose.py  test_corpus.py  test_derive.py  test_layout_graph.py  test_load.py  test_model.py  test_views_graph.py  test_views_grid.py
scripts/dep-graph/v5/views/: graph.py  grid.py
supervisor/: .gitignore
tests/: conftest.py  helpers.py  test___main___adapter_flag.py  test_adapters_auth.py  test_auth.py  test_bootstrap_credential_resolution.py  test_bootstrap_credentials.py  test_bootstrap_missing_credentials.py  test_circuit_config.py  test_cli_wizard.py  test_cli_wizard_create.py  test_cli_wizard_list.py  test_cli_wizard_validate.py  test_config.py  test_config_validate_path.py  test_health_endpoint.py  test_health_endpoint_config.py  test_health_endpoint_status.py  test_main.py  test_main_auth.py  test_main_env_vars.py  test_main_hub.py  test_monitoring_checks.py  test_monitoring_checks_http_idle_reaper.py  test_monitoring_checks_orchestrator.py  test_monitoring_checks_primitives.py  test_monitoring_config.py  test_monitoring_escalation.py  test_read_secret.py  test_tool_display_config.py
tools/: check_duplicate_test_basenames.sh  check_file_length.sh  check_folder_size.sh  file_exemptions.txt  folder_exemptions.txt  license_check.py
topics/: 02-memory.md  machine-1-ubuntu-setup.md
(+2187 files in other folders)
