[project]
name = "lyra"
version = "0.1.0"
description = "Lyra by Roxabi — Personal AI agent engine"
requires-python = ">=3.12,<3.13"
dependencies = [
    "roxabi-vault",
    "cryptography>=42.0",
    "pydantic>=2.12.5",
    # Adapters
    "aiogram>=3.26",       # Telegram — asyncio-native, tracks Bot API same-day
    "discord.py[voice]>=2.4",  # Discord — gateway WebSocket + voice support (voice extra pulls pynacl + davey for crypto; keep updated)
    # TODO(#271): CVE-2025-69277 — pynacl 1.5.0 needs upgrade to >=1.6.2 once discord.py
    # relaxes its pynacl<1.6 Windows constraint.
    # HTTP (webhook server for Telegram + inter-machine calls)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx[asyncio]>=0.28",
    "python-dotenv>=1.0",
    # Agent backends
    "anthropic>=0.49",
    # STT (via voiceCLI)
    "voicecli",
    "typer>=0.14",
    "tomli-w>=1.0",
]

[project.scripts]
lyra = "lyra.cli:lyra_main"
lyra-agent = "lyra.cli:agent_main"

[project.optional-dependencies]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
override-dependencies = [
    "torch>=2.7",
    "torchaudio>=2.7",
    # chatterbox pins transformers==4.46.3, qwen-tts pins ==4.57.3; 5.x breaks qwen_tts
    "transformers>=4.57.3,<5",
    # chatterbox pins numpy<1.26.0 which doesn't build on Python 3.12
    "numpy>=1.26",
    # pandas 2.1.0 doesn't build on 3.12, gradio pulls it in
    "pandas>=2.2",
    # ml-dtypes/onnx need numpy 2.x compat builds
    "ml-dtypes>=0.5",
    "onnx>=1.20",
]

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]

[tool.uv.sources]
roxabi-vault = { git = "https://github.com/Roxabi/roxabi-vault.git", branch = "staging" }
voicecli = { git = "https://github.com/Roxabi/voiceCLI.git", branch = "staging" }

[tool.hatch.build.targets.wheel]
packages = ["src/lyra"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=lyra --cov-report=term-missing --cov-report=xml --cov-fail-under=50"

[tool.coverage.run]
branch = true
source = ["lyra"]

[tool.coverage.report]
show_missing = true

[tool.pyright]
pythonVersion = "3.12"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[tool.ruff]
exclude = [".claude/worktrees"]

[tool.ruff.lint]
select = ["E", "F", "I", "C901", "PLR0913", "PLR0915"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-statements = 50
max-args = 5

[tool.ruff.format]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pip-licenses>=5.5.1",
    "pre-commit>=4.5.1",
    "pyright>=1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0",
    "ruff>=0.3",
]
