[project]
name = "lyra"
version = "0.1.0"
description = "Lyra by Roxabi — Personal AI agent engine"
requires-python = ">=3.12,<3.13"
dependencies = [
    "roxabi-vault",
    "cryptography>=42.0",
    "pydantic>=2.12.5",
    # Adapters
    "aiogram>=3.26",       # Telegram — asyncio-native, tracks Bot API same-day
    "discord.py[voice]>=2.4",  # Discord — gateway WebSocket + voice support (voice extra pulls pynacl + davey for crypto; keep updated)
    # TODO(#271): CVE-2025-69277 — pynacl 1.5.0 needs upgrade to >=1.6.2 once discord.py
    # relaxes its pynacl<1.6 Windows constraint.
    # HTTP (webhook server for Telegram + inter-machine calls)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx[asyncio]>=0.28",
    "python-dotenv>=1.0",
    # NATS transport (NatsBus — issue #455, Slice C of #445)
    "nats-py>=2.6",
    "nkeys>=0.1",
    # Agent backends
    "anthropic>=0.49",
    "typer>=0.14",
    "tomli-w>=1.0",
    "telegramify-markdown>=1.1.0",
    "tabulate>=0.9",
]

[project.scripts]
lyra = "lyra.cli:lyra_main"
lyra-agent = "lyra.cli:agent_main"

[project.optional-dependencies]
voice = [
    "voicecli",  # TTS (Qwen, Chatterbox) + STT (faster-whisper) — requires NVIDIA GPU
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
override-dependencies = [
    "torch>=2.7",
    "torchaudio>=2.7",
    # chatterbox pins transformers==4.46.3, qwen-tts pins ==4.57.3; 5.x breaks qwen_tts
    "transformers>=4.57.3,<5",
    # chatterbox pins numpy<1.26.0 which doesn't build on Python 3.12
    "numpy>=1.26",
    # pandas 2.1.0 doesn't build on 3.12, gradio pulls it in
    "pandas>=2.2",
    # ml-dtypes/onnx need numpy 2.x compat builds
    "ml-dtypes>=0.5",
    "onnx>=1.20",
    "pynacl>=1.6.2",  # CVE-2025-69277 — discord.py 2.7.1 pins <1.6 but 1.6.x is API-compatible (discord.py master confirmed)
    "aiohttp>=3.13.4",  # CVE-2026-34520 + 9 others fixed in 3.13.4 (transitive via aiogram); drop-in, no API changes
]

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]

[tool.uv.sources]
roxabi-vault = { git = "https://github.com/Roxabi/roxabi-vault.git", branch = "staging" }
voicecli = { git = "https://github.com/Roxabi/voiceCLI.git", branch = "staging" }

[tool.hatch.build.targets.wheel]
packages = ["src/lyra"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=lyra --cov-report=term-missing --cov-report=xml --cov-fail-under=50"

[tool.coverage.run]
branch = true
source = ["lyra"]

[tool.coverage.report]
show_missing = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
exclude = ["tests/dep_graph"]
venvPath = "."
venv = ".venv"
# ── Permanent policy ──────────────────────────────────────────────────────────
#
# reportPrivateUsage: Python's _name is a convention (advisory), not access
# control. Pyright enforcing it generates false positives on tightly-coupled
# partner modules, stdlib internals, and white-box test access — none of which
# represent real violations. Enforced by code review, not by the type checker.
reportPrivateUsage = "none"
#
# reportUnusedFunction: Decorator-registered callables (Discord app_commands,
# Telegram update handlers, asyncio task targets) are not statically reachable.
# Confirmed by manual audit 2026-03-23: all 48 src hits are dynamic registrations
# or private module helpers called through the module's public entry point.
reportUnusedFunction = "none"
# ── Wave 4 (#411) — config loading migrated to Pydantic ──────────────────────
# Rules still suppressed: cascading errors from non-config dict[str, Any] in
# business logic, LLM drivers, and tests (~3,165 hits total). Config sites
# are now fully typed. Re-enable incrementally in follow-up issues.
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeArgument = "none"

[tool.ruff]
exclude = [".claude/worktrees", "deploy"]

[tool.ruff.lint]
select = ["E", "F", "I", "C901", "PLR0913", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
# Test files: long docstrings/comments are more readable than wrapped
"tests/**/*.py" = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-statements = 50
max-args = 5

[tool.ruff.format]

[dependency-groups]
dev = [
    "import-linter>=2.0,<3",
    "jsonschema>=4.26.0",
    "pip-audit>=2.10.0",
    "pip-licenses>=5.5.1",
    "pre-commit>=4.5.1",
    "pyright>=1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.3",
]
