[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dep-graph"
version = "0.1.0"
description = "GitHub-driven dependency graph generator for Lyra"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.0", "jinja2>=3.0"]

[dependency-groups]
dev = ["pytest>=8.0", "jsonschema>=4.26.0"]

[project.scripts]
dep-graph = "dep_graph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dep_graph"]

[tool.pytest.ini_options]
testpaths = ["tests", "v5/tests"]
addopts = "--import-mode=importlib"
pythonpath = ["."]
markers = [
    "integration: tests requiring local fixture files (not run in CI by default)",
]
